--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -437,17 +437,16 @@ html {
 }
 
 
-
  #leftCol {
   background: #999;
-  opacity: .5;
-
+  opacity: .8;
   height:100vh;
+  color: #ecf0f1;
 }
 
 #rightCol {
   background: #555;
-  opacity: .5;
+  opacity: .8;
   height: 100vh;
 }
 
