--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -163,7 +163,9 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  color: #1EAEDB; 
+  text-decoration: none;
+}
 a:hover {
   color: #0FA0CE; }
 
@@ -441,7 +443,7 @@ html {
   /*background: #999;*/
   opacity: .8;
   height:100vh;
-  color: #ecf0f1;
+ 
 }
 
 #logoName{
@@ -449,7 +451,8 @@ html {
   margin-left: auto;
   width: 100%;
   /*text-align: center;*/
-  font-size: 10rem;
+  font-size: 8rem;
+  color: #ecf0f1;
 
 
 }
@@ -457,8 +460,9 @@ html {
   margin-right: auto;
   margin-left: auto;
   width: 100%;
-  font-size: 3rem;
+  font-size: 2rem;
   /*text-align: center;*/
+  color: white;
 
 }
 
@@ -490,3 +494,25 @@ footer {
   margin-right: 15px;
   padding-top: 5px;
 }
+hr {
+  border: 0;
+    height: 1px;
+    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(236, 240, 241,1.0), rgba(0,0,0,0));
+    background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(236, 240, 241,1.0), rgba(0,0,0,0));
+    background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(236, 240, 241,1.0), rgba(0,0,0,0));
+    background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(236, 240, 241,1.0), rgba(0,0,0,0));
+}
+
+i {
+  font-size: 2em;
+  color: white;
+   width: 5px;
+  height: 5px;
+}
+
+.fa {
+  color: white;
+  width: 5px;
+  height: 5px;
+}
+
