--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -428,8 +428,8 @@ there.
 /*
  * our additions
  */
-/* Scaling full-page background */
 
+/* Scaling full-page background */
 html {
   background: url(../images/bkgd1.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -438,13 +438,22 @@ html {
   background-size: cover;
 }
 
+.page {
+  display: none;
+  margin-top:30%;
+}
 
- #leftCol {
+#leftCol {
   /*background: #999;*/
   opacity: .8;
   height:100vh;
- 
 }
+
+#siteTitle {
+  height: 60%;
+  margin-top: 45%;
+}
+
 
 #logoName{
   margin-right: auto;
@@ -467,15 +476,12 @@ html {
 }
 
 #rightCol {
-  background: #555;
-  opacity: .8;
+  /* background: #aaa;  */
+  color: white;
+  opacity: 1.0;
   height: 100vh;
 }
 
-#siteTitle {
-  height: 60%;
-  
-}
 
 footer {
   position: absolute;
@@ -491,9 +497,11 @@ footer {
 
 .navBtn {
   margin-left: 15px;
-  margin-right: 35px;
+  margin-right: 15px;
   padding-top: 5px;
 }
+
+
 hr {
   border: 0;
   height: 1px;
