--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -486,7 +486,7 @@ html {
 footer {
   position: absolute;
   bottom: 0;
-  opacity: .75;
+  opacity: .85;
   background: #000;
   height: 12px;
   width: 100%;
@@ -514,5 +514,9 @@ hr {
   background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(236, 240, 241,1.0), rgba(0,0,0,0));
 }
 
-
+.bioHead {
+  height: 60px;
+  width: 60px;
+  border-radius: 128px;
+}
 
