--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -430,12 +430,38 @@ there.
  */
 
 /* Scaling full-page background */
-html {
+.container {
+  z-index: 3;
+}
+
+#bkgdBlur {
+  background: url(../images/bkgd1Blur.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  z-index: 0;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  left:0;
+  top:0;
+}
+
+
+#bkgdMain {
   background: url(../images/bkgd1.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  /*display: none;*/
+  z-index: 1;
+  width:100%;
+  height: 100vh;
+  position: fixed;
+  left:0;
+  top:0;
 }
 
 .page {
@@ -496,7 +522,7 @@ footer {
   text-align: right;  
   padding: 8px 25px 25px 25px;
   font-size: 1.5rem;
-
+  z-index: 10;
 }
 
 .navBtn {
